--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
+
 {% extends "base.html" %}
+{% load render_bundle from webpack_loader %}
 
 {% block main %}
-<div class="container">
-  <h1>Index</h1>
-</div>
+<div id="App"></div>
+{% render_bundle 'vendors' %}
+{% render_bundle 'App' %}
 {% endblock %}
