--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% csrf_token %}
 {% load render_bundle from webpack_loader %}
 {% block main %}
-<div id="App"></div>
+<div id='App'></div>
 {% render_bundle 'vendors' %}
 {% render_bundle 'App' %}
 {% endblock %}
